WIP (starting, crashing)
co-author: Junie, OpenAI GPT OSS 120B